# parallel-and-distributed-systems

./: README.md  settings.gradle.kts
assignment-1/: build.gradle.kts  settings.gradle.kts
assignment-2/: Dockerfile.java  README.md  build.gradle.kts  docker-compose.all.yml  docker-compose.yml  settings.gradle.kts
assignment-2/frontend/: app.js  index.html  style.css
assignment-2/publish-subscriber/: build.gradle.kts  docker-compose.yml  settings.gradle.kts
assignment-2/shared/: build.gradle.kts
assignment-3/: README.md  docker-compose.yml  pyproject.toml  report.typ
assignment-3/benchmarks/: load_test_scenarios.py
assignment-3/docker/: Dockerfile.node
assignment-3/docs/: api_specification.yaml  architecture.mmd
assignment-3/src/communication/: message_passing.py
assignment-3/src/consensus/: pbft.py  raft.py
assignment-3/src/nodes/: base_node.py  cache_node.py  lock_manager.py  main.py  queue_node.py
assignment-3/src/utils/: config.py  hashing.py
assignment-3/tests/integration/: test_recovery.py
assignment-3/tests/unit/: test_cache.py  test_consensus.py  test_lock.py  test_queue.py
endterm/: .dockerignore  .gitignore  Dockerfile  conftest.py  docker-compose.yml  pyproject.toml  report.md
endterm/src/: aggregator.py  main.py  migration.py  models.py
endterm/tests/: test_dedup_concurrency.py  (+3 more)
hands-on-2/: report.typ
hands-on-3/: docker-compose.yaml  report.typ
midterm/: Dockerfile.publisher  README.md  pyproject.toml  report.md
midterm/src/: aggregator.py  database.py  main.py  publisher.py
midterm/tests/: test_service.py
(+70 files in other folders)
