[project]
name = "assignment-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.5",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "locust>=2.43.4",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pytest>=9.0.3",
    "redis>=7.4.0",
    "uvicorn>=0.46.0",
]
