[project]
name = "midterm-aggregator"
version = "0.1.0"
requires-python = "==3.11.*"
description = "Event Aggregator Service for Concurrent and Distributed Systems Midterm"
dependencies = [
    "fastapi[standard]",
    "uvicorn",
    "sqlalchemy",
    "pydantic",
    "python-dateutil",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.uv]
managed = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]